# Gomoku-AI

./: .gitignore  CMakeLists.txt  requirements.txt
.github/workflows/: python-tests.yml
apps/desktop/src/: aiclient.cpp  aiclient.h  boardwidget.cpp  boardwidget.h  gamecontroller.cpp  gamecontroller.h  gamemodel.cpp  gamemodel.h  main.cpp  mainwindow.cpp  mainwindow.h  python_ai_process.cpp  python_ai_process.h
backend/app/: main.py  schemas.py
gomoku_ai/common/: board.py  protocol.py
gomoku_ai/policy/: rl_policy.py
gomoku_ai/search/: ai_stdin.py  heuristics.py  minimax.py
models/: gomoku_policy.pt
tests/: test_ai_stdin.py  test_api.py  test_board.py  test_heuristics.py  test_minimax.py  test_protocol.py
training/: train_policy.py
